fix tabbing not visible in change picture modal

--- a/less/profile.less
+++ b/less/profile.less
@@ -5,3 +5,9 @@
         }
     }
 }
+
+.bootbox-body {
+    .media {
+        overflow: visible;
+    }
+}
